2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj: Bumped version to
	3.2.99.2.

2016-08-08  Natalia Portillo  <claunia@claunia.com>

	* FFS.cs:
	* BFS.cs:
	* ODS.cs:
	* FAT.cs:
	* APFS.cs:
	* NTFS.cs:
	* SysV.cs:
	* HPFS.cs:
	* Opera.cs:
	* Acorn.cs:
	* extFS.cs:
	* BTRFS.cs:
	* ext2FS.cs:
	* ProDOS.cs:
	* SolarFS.cs:
	* UNIXBFS.cs:
	* ISO9660.cs:
	* MinixFS.cs:
	* AmigaDOS.cs:
	* PCEngine.cs:
	* AppleHFS.cs:
	* AppleHFSPlus.cs:
	* Info.cs: Do not try to read past partition end.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Filesystems.csproj: Public beta release
	3.2.99.1.

2016-08-03  Natalia Portillo  <claunia@claunia.com>

	* SysV.cs: Corrected XENIX 3 superblock information.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Filesystems.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs: Change trick to use LisaOS path separator.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Filesystems.csproj: Bump to version 3.2.0

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs: Remove spurious debug leftover.
	"Entries are always an integral number of words" solved.

	* Super.cs: When filling volume block map, check we are not
	going out of bounds.

	* HPFS.cs:
	* SysV.cs: Do not try to read past device.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Super.cs:
	* Xattr.cs:
	* Consts.cs:
	* Structs.cs:
	* AppleMFS.cs: Implemented missing methods, for full MFS
	read-only support.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* File.cs: Correct block size arithmetic.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Consts.cs:
	* Structs.cs: Added missing consts and structures.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* Info.cs:
	* Encoding.cs: Added MacRoman to Unicode.
